--- a/Core.DALC/Core.Negocio/App.config
+++ b/Core.DALC/Core.Negocio/App.config
@@ -13,7 +13,7 @@
     </defaultConnectionFactory>
   </entityFramework>
   <connectionStrings>
-    <add name="QueOfrecesEntities" connectionString="metadata=res://*/EDMQueOfreces.csdl|res://*/EDMQueOfreces.ssdl|res://*/EDMQueOfreces.msl;provider=Oracle.DataAccess.Client;provider connection string=&quot;DATA SOURCE=45.7.229.24:1521/xe;PASSWORD=admin;USER ID=MISOFERTASDB&quot;" providerName="System.Data.EntityClient" />
+    <add name="QueOfrecesEntities" connectionString="metadata=res://*/EDMQueOfreces.csdl|res://*/EDMQueOfreces.ssdl|res://*/EDMQueOfreces.msl;provider=Oracle.DataAccess.Client;provider connection string=&quot;DATA SOURCE=45.7.229.24:1521/xe;PASSWORD=bdmisofertas;USER ID=BDMISOFERTAS&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
