--- a/Core.DALC/Core.Negocio/Core.Negocio.csproj
+++ b/Core.DALC/Core.Negocio/Core.Negocio.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Descuento.cs" />
     <Compile Include="Oferta.cs" />
     <Compile Include="Producto.cs" />
+    <Compile Include="ProductoCollections.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Retail.cs" />
     <Compile Include="Rubro.cs" />
