--- a/Core.DALC/Core.DALC/App.config
+++ b/Core.DALC/Core.DALC/App.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <connectionStrings>
-    <add name="QueOfrecesEntities" connectionString="metadata=res://*/EDMQueOfreces.csdl|res://*/EDMQueOfreces.ssdl|res://*/EDMQueOfreces.msl;provider=Oracle.ManagedDataAccess.Client;provider connection string=&quot;DATA SOURCE=45.7.229.24:1521/xe;PASSWORD=bdmisofertas;USER ID=BDMISOFERTAS&quot;" providerName="System.Data.EntityClient" />
+    <add name="QueOfrecesEntities" connectionString="metadata=res://*/QueOfrecesEDM.csdl|res://*/QueOfrecesEDM.ssdl|res://*/QueOfrecesEDM.msl;provider=Oracle.ManagedDataAccess.Client;provider connection string=&quot;DATA SOURCE=45.7.229.24:1521/xe;PASSWORD=bdmisofertas;USER ID=BDMISOFERTAS&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
