--- a/Core.DALC/Core.DALC/Core.DALC.csproj
+++ b/Core.DALC/Core.DALC/Core.DALC.csproj
@@ -55,89 +55,101 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CATEGORIA_OFERTA.cs">
-      <DependentUpon>EDMQueOfreces.tt</DependentUpon>
+      <DependentUpon>QueOfrecesEDM.tt</DependentUpon>
     </Compile>
     <Compile Include="Class1.cs" />
+    <Compile Include="COMPORTAMIENTO.cs">
+      <DependentUpon>QueOfrecesEDM.tt</DependentUpon>
+    </Compile>
     <Compile Include="COMUNA.cs">
-      <DependentUpon>EDMQueOfreces.tt</DependentUpon>
+      <DependentUpon>QueOfrecesEDM.tt</DependentUpon>
     </Compile>
     <Compile Include="CUPON.cs">
-      <DependentUpon>EDMQueOfreces.tt</DependentUpon>
+      <DependentUpon>QueOfrecesEDM.tt</DependentUpon>
     </Compile>
     <Compile Include="DESCUENTO.cs">
-      <DependentUpon>EDMQueOfreces.tt</DependentUpon>
+      <DependentUpon>QueOfrecesEDM.tt</DependentUpon>
     </Compile>
-    <Compile Include="EDMQueOfreces.Context.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>EDMQueOfreces.Context.tt</DependentUpon>
-    </Compile>
-    <Compile Include="EDMQueOfreces.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>EDMQueOfreces.tt</DependentUpon>
-    </Compile>
-    <Compile Include="EDMQueOfreces.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>EDMQueOfreces.edmx</DependentUpon>
+    <Compile Include="DESCUENTO_HAS_RUBRO.cs">
+      <DependentUpon>QueOfrecesEDM.tt</DependentUpon>
     </Compile>
     <Compile Include="OFERTA.cs">
-      <DependentUpon>EDMQueOfreces.tt</DependentUpon>
+      <DependentUpon>QueOfrecesEDM.tt</DependentUpon>
     </Compile>
     <Compile Include="PAIS.cs">
-      <DependentUpon>EDMQueOfreces.tt</DependentUpon>
+      <DependentUpon>QueOfrecesEDM.tt</DependentUpon>
     </Compile>
     <Compile Include="PERFIL.cs">
-      <DependentUpon>EDMQueOfreces.tt</DependentUpon>
+      <DependentUpon>QueOfrecesEDM.tt</DependentUpon>
+    </Compile>
+    <Compile Include="PREFERENCIA.cs">
+      <DependentUpon>QueOfrecesEDM.tt</DependentUpon>
     </Compile>
     <Compile Include="PRODUCTO.cs">
-      <DependentUpon>EDMQueOfreces.tt</DependentUpon>
+      <DependentUpon>QueOfrecesEDM.tt</DependentUpon>
+    </Compile>
+    <Compile Include="PRODUCTO_HAS_OFERTA.cs">
+      <DependentUpon>QueOfrecesEDM.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QueOfrecesEDM.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>QueOfrecesEDM.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="QueOfrecesEDM.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>QueOfrecesEDM.tt</DependentUpon>
+    </Compile>
+    <Compile Include="QueOfrecesEDM.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>QueOfrecesEDM.edmx</DependentUpon>
+    </Compile>
     <Compile Include="REGION.cs">
-      <DependentUpon>EDMQueOfreces.tt</DependentUpon>
+      <DependentUpon>QueOfrecesEDM.tt</DependentUpon>
     </Compile>
     <Compile Include="RETAIL.cs">
-      <DependentUpon>EDMQueOfreces.tt</DependentUpon>
+      <DependentUpon>QueOfrecesEDM.tt</DependentUpon>
     </Compile>
     <Compile Include="RUBRO.cs">
-      <DependentUpon>EDMQueOfreces.tt</DependentUpon>
+      <DependentUpon>QueOfrecesEDM.tt</DependentUpon>
     </Compile>
     <Compile Include="SUCURSALES.cs">
-      <DependentUpon>EDMQueOfreces.tt</DependentUpon>
+      <DependentUpon>QueOfrecesEDM.tt</DependentUpon>
     </Compile>
     <Compile Include="USUARIO.cs">
-      <DependentUpon>EDMQueOfreces.tt</DependentUpon>
+      <DependentUpon>QueOfrecesEDM.tt</DependentUpon>
     </Compile>
     <Compile Include="VALORACION.cs">
-      <DependentUpon>EDMQueOfreces.tt</DependentUpon>
+      <DependentUpon>QueOfrecesEDM.tt</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <EntityDeploy Include="EDMQueOfreces.edmx">
-      <Generator>EntityModelCodeGenerator</Generator>
-      <LastGenOutput>EDMQueOfreces.Designer.cs</LastGenOutput>
-    </EntityDeploy>
     <None Include="App.Config" />
-    <None Include="EDMQueOfreces.edmx.diagram">
-      <DependentUpon>EDMQueOfreces.edmx</DependentUpon>
-    </None>
     <None Include="packages.config" />
+    <EntityDeploy Include="QueOfrecesEDM.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>QueOfrecesEDM.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <None Include="QueOfrecesEDM.edmx.diagram">
+      <DependentUpon>QueOfrecesEDM.edmx</DependentUpon>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="EDMQueOfreces.Context.tt">
+    <Content Include="QueOfrecesEDM.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>EDMQueOfreces.edmx</DependentUpon>
-      <LastGenOutput>EDMQueOfreces.Context.cs</LastGenOutput>
+      <DependentUpon>QueOfrecesEDM.edmx</DependentUpon>
+      <LastGenOutput>QueOfrecesEDM.Context.cs</LastGenOutput>
     </Content>
-    <Content Include="EDMQueOfreces.tt">
+    <Content Include="QueOfrecesEDM.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
-      <DependentUpon>EDMQueOfreces.edmx</DependentUpon>
-      <LastGenOutput>EDMQueOfreces.cs</LastGenOutput>
+      <DependentUpon>QueOfrecesEDM.edmx</DependentUpon>
+      <LastGenOutput>QueOfrecesEDM.cs</LastGenOutput>
     </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
