--- a/Core.DALC/Core.Negocio/Core.Negocio.csproj
+++ b/Core.DALC/Core.Negocio/Core.Negocio.csproj
@@ -57,11 +57,13 @@
   <ItemGroup>
     <Compile Include="Descuento.cs" />
     <Compile Include="Oferta.cs" />
+    <Compile Include="OfertaCollections.cs" />
     <Compile Include="Producto.cs" />
     <Compile Include="ProductoCollections.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Retail.cs" />
     <Compile Include="Rubro.cs" />
+    <Compile Include="RubroCollections.cs" />
     <Compile Include="Usuario.cs" />
     <Compile Include="UsuarioColection.cs" />
   </ItemGroup>
