--- a/Core.DALC/Core.DALC/packages.config
+++ b/Core.DALC/Core.DALC/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="EntityFramework" version="5.0.0" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net452" />
+  <package id="Oracle.ManagedDataAccess" version="12.2.1100" targetFramework="net452" />
 </packages>
