--- a/Core.DALC/Core.Servicios/Web.config
+++ b/Core.DALC/Core.Servicios/Web.config
@@ -1,5 +1,9 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+  </configSections>
   <connectionStrings>
     <add name="QueOfrecesEntities" connectionString="metadata=res://*/QueOfrecesEDM.csdl|res://*/QueOfrecesEDM.ssdl|res://*/QueOfrecesEDM.msl;provider=Oracle.ManagedDataAccess.Client;provider connection string=&quot;DATA SOURCE=45.7.229.24:1521/xe;PASSWORD=bdmisofertas;USER ID=BDMISOFERTAS&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
@@ -11,20 +15,30 @@
     <httpRuntime targetFramework="4.5.2" />
   </system.web>
   <system.serviceModel>
+    <services>
+      <service name="Core.Servicios.ServicioWeb">
+        <endpoint address="" behaviorConfiguration="Core.Servicios.ServicioWebAspNetAjaxBehavior"
+          binding="webHttpBinding" contract="Core.Servicios.ServicioWeb" />
+      </service>
+    </services>
     <behaviors>
+      <endpointBehaviors>
+        <behavior name="Core.Servicios.ServicioWebAspNetAjaxBehavior">
+          <enableWebScript />
+        </behavior>
+      </endpointBehaviors>
       <serviceBehaviors>
-        <behavior>
-          <!-- Para evitar revelar información de los metadatos, establezca los valores siguientes en false antes de la implementación -->
+        <behavior name="">
           <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true" />
-          <!-- Para recibir detalles de las excepciones en los fallos, con el fin de poder realizar la depuración, establezca el valor siguiente en true. Para no revelar información sobre las excepciones, establézcalo en false antes de la implementación -->
           <serviceDebug includeExceptionDetailInFaults="false" />
         </behavior>
       </serviceBehaviors>
     </behaviors>
     <protocolMapping>
-        <add binding="basicHttpsBinding" scheme="https" />
-    </protocolMapping>    
-    <serviceHostingEnvironment aspNetCompatibilityEnabled="true" multipleSiteBindingsEnabled="true" />
+      <add binding="basicHttpsBinding" scheme="https" />
+    </protocolMapping>
+    <serviceHostingEnvironment aspNetCompatibilityEnabled="true"
+      multipleSiteBindingsEnabled="true" />
   </system.serviceModel>
   <system.webServer>
     <modules runAllManagedModulesForAllRequests="true" />
@@ -34,20 +48,19 @@
       -->
     <directoryBrowse enabled="true" />
   </system.webServer>
-
   <runtime>
-
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
-
       <dependentAssembly>
-
         <assemblyIdentity name="EntityFramework" publicKeyToken="b77a5c561934e089" culture="neutral" />
-
         <bindingRedirect oldVersion="0.0.0.0-5.0.0.0" newVersion="5.0.0.0" />
-
       </dependentAssembly>
-
     </assemblyBinding>
-
   </runtime>
+  <entityFramework>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
+      <parameters>
+        <parameter value="v13.0" />
+      </parameters>
+    </defaultConnectionFactory>
+  </entityFramework>
 </configuration>
