--- a/Core.DALC/Core.Negocio/Core.Negocio.csproj
+++ b/Core.DALC/Core.Negocio/Core.Negocio.csproj
@@ -56,11 +56,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Descuento.cs" />
+    <Compile Include="Listas.cs" />
     <Compile Include="Oferta.cs" />
     <Compile Include="OfertaCollections.cs" />
     <Compile Include="Producto.cs" />
     <Compile Include="ProductoCollections.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Region.cs" />
     <Compile Include="Retail.cs" />
     <Compile Include="Rubro.cs" />
     <Compile Include="RubroCollections.cs" />
