--- a/Core.DALC/QOfreces.WPF/packages.config
+++ b/Core.DALC/QOfreces.WPF/packages.config
@@ -2,6 +2,8 @@
 <packages>
   <package id="EntityFramework" version="5.0.0" targetFramework="net452" />
   <package id="JSON" version="1.0.1" targetFramework="net452" />
+  <package id="MahApps.Metro" version="1.5.0" targetFramework="net452" />
+  <package id="MahApps.Metro.Resources" version="0.6.1.0" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net452" />
   <package id="Oracle.ManagedDataAccess" version="12.2.1100" targetFramework="net452" />
 </packages>
