--- a/Core.DALC/QOfreces.WPF/QOfreces.WPF.csproj
+++ b/Core.DALC/QOfreces.WPF/QOfreces.WPF.csproj
@@ -244,6 +244,9 @@
     <Resource Include="img\MantenedorProducto.png" />
     <Resource Include="img\MantenedorRubro.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="img\lupa.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
