--- a/Core.DALC/Core.Servicios/packages.config
+++ b/Core.DALC/Core.Servicios/packages.config
@@ -3,5 +3,5 @@
   <package id="EntityFramework" version="5.0.0" targetFramework="net452" />
   <package id="JSON" version="1.0.1" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net452" />
-  <package id="Oracle.ManagedDataAccess" version="12.2.1100" targetFramework="net452" />
+  <package id="Oracle.ManagedDataAccess" version="12.1.24160719" targetFramework="net452" />
 </packages>
