--- a/Core.DALC/QOfreces.WPF/QOfreces.WPF.csproj
+++ b/Core.DALC/QOfreces.WPF/QOfreces.WPF.csproj
@@ -247,6 +247,13 @@
   <ItemGroup>
     <Resource Include="img\lupa.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="img\Consultar.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="img\Generar.png" />
+    <Resource Include="img\Publicar.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
