--- a/Core.DALC/Core.Negocio/Core.Negocio.csproj
+++ b/Core.DALC/Core.Negocio/Core.Negocio.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Rubro.cs" />
     <Compile Include="RubroCollections.cs" />
     <Compile Include="Sucursal.cs" />
+    <Compile Include="SucursalCollections.cs" />
     <Compile Include="Usuario.cs" />
     <Compile Include="UsuarioColection.cs" />
   </ItemGroup>
