--- a/Core.DALC/Core.Negocio/Core.Negocio.csproj
+++ b/Core.DALC/Core.Negocio/Core.Negocio.csproj
@@ -55,6 +55,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CategoriaCollections.cs" />
+    <Compile Include="CategoriaOferta.cs" />
     <Compile Include="Descuento.cs" />
     <Compile Include="Listas.cs" />
     <Compile Include="Oferta.cs" />
