--- a/Core.DALC/Core.Negocio/Core.Negocio.csproj
+++ b/Core.DALC/Core.Negocio/Core.Negocio.csproj
@@ -67,6 +67,7 @@
     <Compile Include="ProductoCollections.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Region.cs" />
+    <Compile Include="RegionCollections.cs" />
     <Compile Include="Retail.cs" />
     <Compile Include="Rubro.cs" />
     <Compile Include="RubroCollections.cs" />
