Creación de clase Comuna, metodo listar comunas para web en clase comuna y servicio web para listar comunas

--- a/Core.DALC/Core.Negocio/Core.Negocio.csproj
+++ b/Core.DALC/Core.Negocio/Core.Negocio.csproj
@@ -57,6 +57,7 @@
   <ItemGroup>
     <Compile Include="CategoriaCollections.cs" />
     <Compile Include="CategoriaOferta.cs" />
+    <Compile Include="Comuna.cs" />
     <Compile Include="Descuento.cs" />
     <Compile Include="Listas.cs" />
     <Compile Include="Oferta.cs" />
