--- a/Core.DALC/Core.Negocio/Core.Negocio.csproj
+++ b/Core.DALC/Core.Negocio/Core.Negocio.csproj
@@ -58,6 +58,7 @@
     <Compile Include="CategoriaCollections.cs" />
     <Compile Include="CategoriaOferta.cs" />
     <Compile Include="Comuna.cs" />
+    <Compile Include="ComunaCollections.cs" />
     <Compile Include="Descuento.cs" />
     <Compile Include="Listas.cs" />
     <Compile Include="Oferta.cs" />
