--- a/Core.DALC/Core.Negocio/Core.Negocio.csproj
+++ b/Core.DALC/Core.Negocio/Core.Negocio.csproj
@@ -81,14 +81,14 @@
     <Compile Include="UsuarioColection.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Core.DALC\Core.DALC.csproj">
-      <Project>{89b57a38-ab36-482f-96a6-75a677f354d2}</Project>
-      <Name>Core.DALC</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
     <None Include="app.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Core.DALC\Core.DALC\Core.DALC.csproj">
+      <Project>{d0a72252-bc39-4345-b6ac-f3dcbc81179b}</Project>
+      <Name>Core.DALC</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
