--- a/Core.DALC/Core.Servicios/Web.config
+++ b/Core.DALC/Core.Servicios/Web.config
@@ -9,7 +9,9 @@
       type="OracleInternal.Common.ODPMSectionHandler, Oracle.ManagedDataAccess, Version=4.121.2.0, Culture=neutral, PublicKeyToken=89b483f429c47342"/>    
   </configSections>
   <connectionStrings>
-    <add name="QueOfrecesEntities" connectionString="metadata=res://*/QueOfrecesEDM.csdl|res://*/QueOfrecesEDM.ssdl|res://*/QueOfrecesEDM.msl;provider=Oracle.ManagedDataAccess.Client;provider connection string=&quot;DATA SOURCE=45.7.229.24:1521/xe;PASSWORD=bdmisofertas;USER ID=BDMISOFERTAS&quot;" providerName="System.Data.EntityClient" />
+    <add name="QueOfrecesEntities"
+      connectionString="metadata=res://*/EDMQueOfreces.csdl|res://*/EDMQueOfreces.ssdl|res://*/EDMQueOfreces.msl;provider=Oracle.ManagedDataAccess.Client;provider connection string=&quot;DATA SOURCE=45.7.229.24:1521/xe;PASSWORD=bdmisofertas;USER ID=BDMISOFERTAS&quot;"
+      providerName="System.Data.EntityClient"/>
   </connectionStrings>
   <appSettings>
     <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true"/>
