--- a/Core.DALC/QOfreces.WPF/App.config
+++ b/Core.DALC/QOfreces.WPF/App.config
@@ -9,9 +9,9 @@
       type="OracleInternal.Common.ODPMSectionHandler, Oracle.ManagedDataAccess, Version=4.122.1.0, Culture=neutral, PublicKeyToken=89b483f429c47342"/>
   </configSections>
   <connectionStrings>
-    <add name="QOfreces.WPF.Properties.Settings.ConnectionString"
-      connectionString="DATA SOURCE=45.7.229.24:1521/xe;PASSWORD=bdmisofertas;USER ID=BDMISOFERTAS"
-      providerName="Oracle.ManagedDataAccess.Client" />
+    <add name="QueOfrecesEntities"
+      connectionString="metadata=res://*/EDMQueOfreces.csdl|res://*/EDMQueOfreces.ssdl|res://*/EDMQueOfreces.msl;provider=Oracle.ManagedDataAccess.Client;provider connection string=&quot;DATA SOURCE=45.7.229.24:1521/xe;PASSWORD=bdmisofertas;USER ID=BDMISOFERTAS&quot;"
+      providerName="System.Data.EntityClient"/>
   </connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2"/>
